Fixed vary layout issues for mobile

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,7 +5,6 @@ footer {
 
 	max-width: none;
 	width: 100%;
-	box-sizing: border-box;
 
 	.content {
 		display: flex;
@@ -29,5 +28,22 @@ footer {
 
 	.linkedin-logo {
 		width: 30px;
+	}
+}
+
+@media (max-width: 700px) {
+	footer {
+		.content, .contact-information {
+			flex-direction: column;
+		}
+
+		.contact-information__item {
+			margin: 0.3rem;
+			&:not(:last-child)::after {
+				content: none;
+				margin: 0.5rem;
+				border-right: 1px solid #fff;
+			}
+		}
 	}
 }
