--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -50,3 +50,15 @@ header {
 		padding-right: 1rem;;
 	}
 }
+
+@media (max-width: 700px) {
+	.home-logo {
+		a::after {
+			content: none;
+		}
+
+		span { 
+			display: none; 
+		}
+	}
+}
