--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -1,5 +1,5 @@
 main.portfolio {
-	padding: 1rem 0;
+	padding: 1.5rem;
 }
 
 .link-container {
