--- a/src/styles/_projectCard.scss
+++ b/src/styles/_projectCard.scss
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: space-evenly;
-	box-sizing: border-box;
 
 	padding: 1rem;
 	width: 300px;
