--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+* {
+	box-sizing: border-box;
+}
+
 html {
 	font-family: 'Roboto', sans-serif;
 }
